2006-10-16  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/i386.h (jit_flush_code): Fix syntax error. :-(

2006-07-06  Paolo Bonzini  <bonzini@gnu.org>
	    Ludovic Courtes  <ludovic.courtes@laas.fr>

	* doc/using.texi: Clarify "Using autoconf" section
	and rename it to "Bundling lightning"
	* lightning.m4: Work also if lightning is not bundled.

2006-07-06  Paolo Bonzini  <bonzini@gnu.org>
	    Ludovic Courtes  <ludovic.courtes@laas.fr>

	* lightning/ppc/core.h (_jit_mod): Replace with...
	(_jit_mod_big, _jit_mod_small): ... these.
	(jit_modi_i, jit_modi_ui): Rewrite.
	* tests/modi.c, tests/modi.ok: New tests.

2006-05-18  Matthew Flatt  <mflatt@cs.utah.edu>

	* lightning/i386/asm.h: Fix test for extending the mprotect area
	towards lower addresses.

2006-05-16  Bruno Haible  <bruno@clisp.org>

	* lightning/asm-common.h: Don't use __func__ nor __FUNCTION__ if
	not compiling with GNU C.

2006-02-16  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/core.h: Fix jit_ldxi_* with big displacement.

2006-01-23  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Fix comments in config.h.in.
	
2005-11-25  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/sparc/fp.h: Fix header comment.
	* lightning/ppc/fp.h: Fix header comment.

2005-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/asm.h (JCm, JCSm, JNCm, JNCSm): New.

2004-11-26  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/funcs.h (_jit_epilog): Remove unused variable.

2004-11-13  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/funcs.h [__linux__]: Include sys/mman.h.

2004-11-09  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/sparc/fp.h: Fix fp-to-integer conversions.
	* lightning/ppc/testfp.c: Test fp-to-integer conversions
	of integer numbers.
	* lightning/ppc/testfp.ok: Adjust for the above.

2004-11-08  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/testfp.c: Always flush code before
	testing it.

2004-11-08  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/fp.h: Do not clobber f31.
